Fixed better design for mobile

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>jsramverk.me</title>
     <style>*{margin:0}body,html{height:100%}html{font-size:100%;font-family:sans-serif}h1{font-size:8rem}.main-header{position:absolute;bottom:4rem;right:4rem}.container,.main{width:100%;height:100%;z-index:10;position:relative}.container{padding-bottom:32rem}.main{background-color:#f0db4f;color:#333;box-sizing:border-box;padding:6rem;box-shadow:0 10px 32px 0 rgba(0,0,0,.2);animation:pulsate-bg 30s linear infinite}@media (max-width:1000px){.main-header{font-size:4em;bottom:3rem;right:3rem}}@media (max-width:667px){.main{padding:.8rem}.main-header{font-size:3em;bottom:2rem;right:2rem}}@media (min-width:64em){html{font-size:112.5%}}</style>
     <link rel="stylesheet" href="inter-ui.css" media="none" onload="if(media!='all')media='all'">
-    <link rel="stylesheet" href="style.min.css" media="none" onload="if(media!='all')media='all'">
+    <link rel="stylesheet" href="style.css" media="none" onload="if(media!='all')media='all'">
     <noscript>
         <link rel="stylesheet" href="style.min.css">
     </noscript>
@@ -20,8 +20,7 @@
             <div class="inner-footer">
                 <div class="footer-column">
                     <h2>dbwebb</h2>
-                    <p><a href="https://dbwebb.se">dbwebb.se</a> är en lärande community för programmering i webbmiljö.<br>
-Lär dig själv - och hjälp andra lära sig - databaser, webbprogrammering och webbutveckling. Kika gärna på våra kurser, artiklar, guider, uppgifter och delta i gemenskapen.</p>
+                    <p><a href="https://dbwebb.se">dbwebb.se</a> är en lärande community för programmering i webbmiljö. Lär dig själv - och hjälp andra lära sig - databaser, webbprogrammering och webbutveckling. Kika gärna på våra kurser, artiklar, guider, uppgifter och delta i gemenskapen.</p>
                 </div>
                 <div class="footer-column">
                     <h2>jsramverk</h2>
