--- a/old.html
+++ b/old.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="inter-ui.css" media="none" onload="if(media!='all')media='all'">
     <link rel="stylesheet" href="style.css" media="none" onload="if(media!='all')media='all'">
     <noscript>
-        <link rel="stylesheet" href="style.min.css">
+        <link rel="stylesheet" href="style.css">
     </noscript>
 </head>
 <body>
