Tried to improve the colors but probably have to pick 7 different colors to use

--- a/index.html
+++ b/index.html
@@ -18,64 +18,78 @@
 
     <main class="container">
         <h2 class="main-title">Välkommen till jsramverk<h2>
-        <p>Detta är kursen DV1612 JavaScript-baserade webbramverk. Vi ska i denna kurs använda oss av javaScript både på frontend och backend för skapa användarvänliga webbplatser.</p>
-        <p>Nedan finns inlämningsuppgifterna i kursen tillsammans med material om de tekniker och verktyg som används i kursen.</p>
+        <p>Detta är kursen DV1612 JavaScript-baserade webbramverk. Vi ska i denna kurs använda oss av JavaScript ramverk både på frontend och backend för skapa användarvänliga webbplatser.</p>
+        <p>Nedan finns inlämningsuppgifterna tillsammans med material om de tekniker och verktyg som används i kursen.</p>
 
         <div class="assignments">
-            <div class="assignment-box blue-box">
+            <div class="assignment-box">
                 <div class="assignment-header">
                     <h3>1: Frontend</h3>
                 </div>
                 <div class="assignment-body">
-                    <p>Vi utvärderar frontend ramverk och skapar en me-applikation.</p>
+                    <p>Vi utvärderar frontend ramverk och skapar en me-applikation i det JavaScript ramverk du valde.</p>
+
+                    <p><a href="#">Gå till uppgiften</a></p>
                 </div>
             </div>
-            <div class="assignment-box pink-box">
+            <div class="assignment-box">
                 <div class="assignment-header">
                     <h3>2: UX</h3>
                 </div>
                 <div class="assignment-body">
                     <p>Vi bygger vidare på vår me-applikation och tittar på hur användarens upplevelse sätts i fokus.</p>
+
+                    <p><a href="#">Gå till uppgiften</a></p>
                 </div>
             </div>
-            <div class="assignment-box yellow-box">
+            <div class="assignment-box">
                 <div class="assignment-header">
                     <h3>3: Backend</h3>
                 </div>
                 <div class="assignment-body">
                     <p>Vi skaffar oss en server och driftsätter ett API som vi använder i vår me-applikation.</p>
+
+                    <p><a href="#">Gå till uppgiften</a></p>
                 </div>
             </div>
-            <div class="assignment-box blue-box">
+            <div class="assignment-box">
                 <div class="assignment-header">
                     <h3>4: Test</h3>
                 </div>
                 <div class="assignment-body">
-                    <p>Vi skapar en testmiljö för både frontend och backend kod, samt sätter upp ett flöde för Continouos Integration.</p>
+                    <p>Vi skapar en testmiljö för både frontend och backend kod, samt ett flöde för Continouos Integration.</p>
+
+                    <p><a href="#">Gå till uppgiften</a></p>
                 </div>
             </div>
-            <div class="assignment-box pink-box">
+            <div class="assignment-box">
                 <div class="assignment-header">
                     <h3>5: Realtid</h3>
                 </div>
                 <div class="assignment-body">
-                    <p>Vi tittar på hur vi kan websockets för realtidsprogrammering.</p>
+                    <p>Vi tittar på hur vi kan använda websockets för realtidsprogrammering på webben.</p>
+
+                    <p><a href="#">Gå till uppgiften</a></p>
                 </div>
             </div>
-            <div class="assignment-box yellow-box">
+            <div class="assignment-box">
                 <div class="assignment-header">
                     <h3>6: NoSQL</h3>
                 </div>
                 <div class="assignment-body">
-                    <p>Vi tittar på hur vi kan använda en NoSQL databas för att spara data.</p>
+                    <p>Vi användar en NoSQL databas för att spara data och jämför med relationsdatabaser.</p>
+
+                    <p><a href="#">Gå till uppgiften</a></p>
                 </div>
             </div>
-            <div class="assignment-box project blue-box">
+            <div class="assignment-box project">
                 <div class="assignment-header">
                     <h3>Projekt: Trading plattform</h3>
                 </div>
                 <div class="assignment-body">
                     <p>Du använder dina kunskaper från tidigare i kursen till att skapa en trading plattform.</p>
+
+                    <p><a href="#">Gå till projektet</a></p>
                 </div>
             </div>
         </div>
