Tried to make the toc sticky

--- a/output/week2.html
+++ b/output/week2.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>jsramverk</title>
-    <style>*{margin:0;padding:0;box-sizing:border-box}body{font-family:sans-serif}.header{position:fixed;top:0;width:100%;padding:1.4rem 1rem;background:linear-gradient(45deg, #f0db4f, #f4e57e);box-shadow:2px 2px 5px 0 rgba(0,0,0,.2);z-index:1000}.header a{color:#323330;text-decoration:none}.header a:hover{text-decoration:underline}.container,.inner-footer{width:100%;margin-top:8em;padding:1.4em 1em;overflow:auto;position:relative}::selection,::-moz-selection{background:#f0db4f}.main-title{font-size:2.4rem;margin-bottom:1.4rem}.toc{display:none}@media(min-width: 768px){.container,.inner-footer{width:740px;margin-left:auto;margin-right:auto}.main-title{font-size:3rem;margin-bottom:1.4rem}}@media(min-width: 992px){.container,.inner-footer{width:960px}.toc{display:block;position:-webkit-sticky;position:sticky;text-align:right;width:30%;top:0;left:0}.week{width:65%;margin-left:35%}.main-title{font-size:4rem;margin-bottom:1.96rem}p{font-size:1.4rem;margin-bottom:1.96rem}}@media(min-width: 1200px){.container,.inner-footer{width:1160px}}/*# sourceMappingURL=inline.min.css.map */
+    <style>*{margin:0;padding:0;box-sizing:border-box}html{scroll-behavior:smooth}body{font-family:sans-serif}.header{position:fixed;top:0;width:100%;padding:1.4rem 1rem;background:linear-gradient(45deg, #f0db4f, #f4e57e);box-shadow:2px 2px 5px 0 rgba(0,0,0,.2);z-index:1000}.header a{color:#323330;text-decoration:none}.header a:hover{text-decoration:underline}.container,.inner-footer{width:100%;margin-top:8em;padding:1.4em 1em;overflow:auto}::selection,::-moz-selection{background:#f0db4f}.main-title{font-size:2.4rem;margin-bottom:1.4rem}.toc{display:none}@media(min-width: 768px){.container,.inner-footer{width:740px;margin-left:auto;margin-right:auto}.main-title{font-size:3rem;margin-bottom:1.4rem}}@media(min-width: 992px){.container,.inner-footer{width:960px}.week-container{display:grid;grid-template-columns:30% auto}.week{width:65%}.main-title{font-size:4rem;margin-bottom:1.96rem}p{font-size:1.4rem;margin-bottom:1.96rem}}@media(min-width: 1200px){.container,.inner-footer{width:1160px}}/*# sourceMappingURL=inline.min.css.map */
 </style>
     <link rel="stylesheet" href="inter-ui.css" media="none" onload="if(media!='all')media='all'">
     <link rel="stylesheet" href="style.min.css" media="none" onload="if(media!='all')media='all'">
@@ -18,7 +18,7 @@
     </header>
 
     <main class="container">
-<p class='breadcrump'><a href='/'>jsramverk.me</a> / UX</p><ul class='toc'><li><a href='#'>läsa</a></li><li><a href='#'>titta</a></li><li><a href='#'>kravspec</a></li></ul><article class='week'><h1>UX</h1>
+<p class='breadcrump'><a href='/'>jsramverk.me</a> / UX</p><div class='week-container'><nav class='toc'><ul><li><a href='#'>läsa</a></li><li><a href='#'>titta</a></li><li><a href='#'>kravspec</a></li></ul></nav><article class='week'><h1>UX</h1>
 
 <p>Vi bygger vidare på vår me-applikation och tittar på hur användarens upplevelse sätts i fokus.</p>
 
@@ -116,7 +116,7 @@
 
 <p>Nulla facilisi. Nunc convallis turpis sit amet pretium gravida. Quisque iaculis, libero eu varius tempor, tortor quam ultricies ante, ac interdum sem justo ac urna. In nec placerat turpis. Vestibulum varius placerat libero, vitae viverra justo pretium non. Nullam at porttitor enim. Proin tincidunt eget metus eget eleifend. In eget arcu sapien. Suspendisse tincidunt orci vitae libero imperdiet sagittis condimentum condimentum dolor.</p>
 
-<p>Nullam porttitor elementum justo, sed finibus lectus. Donec tristique urna nec est accumsan, sed ornare lacus sagittis. Proin luctus augue enim, id porttitor tortor malesuada nec. Duis a scelerisque lorem. Integer non imperdiet odio. Pellentesque porta nulla ac orci scelerisque, a gravida mi mattis. Aenean vehicula bibendum libero, sit amet faucibus quam ornare vel. Proin ultricies risus tincidunt hendrerit condimentum. Phasellus turpis orci, aliquam non sodales sit amet, auctor at lacus. Quisque tortor erat, placerat sed lorem sed, ultricies commodo lacus. Donec fermentum porta quam quis tempus. </p></article>    </main>
+<p>Nullam porttitor elementum justo, sed finibus lectus. Donec tristique urna nec est accumsan, sed ornare lacus sagittis. Proin luctus augue enim, id porttitor tortor malesuada nec. Duis a scelerisque lorem. Integer non imperdiet odio. Pellentesque porta nulla ac orci scelerisque, a gravida mi mattis. Aenean vehicula bibendum libero, sit amet faucibus quam ornare vel. Proin ultricies risus tincidunt hendrerit condimentum. Phasellus turpis orci, aliquam non sodales sit amet, auctor at lacus. Quisque tortor erat, placerat sed lorem sed, ultricies commodo lacus. Donec fermentum porta quam quis tempus. </p></article></div>    </main>
 
     <footer class="footer">
         <div class="inner-footer">
