--- a/output/index.html
+++ b/output/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>jsramverk</title>
-    <style>*{margin:0;padding:0;box-sizing:border-box}html{scroll-behavior:smooth}body{font-family:sans-serif;font-display:auto}.header{width:100%;padding:1.4rem 1rem;background:linear-gradient(45deg, #f0db4f, #f4e57e);box-shadow:2px 2px 5px 0 rgba(0,0,0,.2);z-index:1000}.header a{color:#323330;text-decoration:none}.header a:hover{text-decoration:underline}.container,.inner-footer{width:100%;margin-top:2rem;padding:1.4rem 1rem;overflow:auto}::selection,::-moz-selection{background:#f0db4f}.main-title{font-size:2.4rem;margin-bottom:1.4rem}.toc{display:none}@media(min-width: 768px){.container,.inner-footer{width:740px;margin-left:auto;margin-right:auto}.main-title{font-size:3rem;margin-bottom:1.4rem}}@media(min-width: 992px){.container,.inner-footer{width:960px}.week{width:65%;margin-left:35%}.main-title{font-size:4rem;margin-bottom:1.96rem}p{font-size:1.4rem;margin-bottom:1.96rem}.toc{width:25%;display:block;position:fixed;top:16rem;text-align:right}.toc ul{list-style-type:none;font-size:1.4rem}}@media(min-width: 1200px){.container,.inner-footer{width:1160px}}/*# sourceMappingURL=inline.min.css.map */
+    <style>*{margin:0;padding:0;box-sizing:border-box}html{scroll-behavior:smooth}body{font-family:sans-serif;font-display:auto}.header{width:100%;padding:1.4rem 1rem;background:linear-gradient(45deg, #f0db4f, #f4e57e);box-shadow:2px 2px 5px 0 rgba(0,0,0,.2);z-index:1000}.header h1{margin-bottom:0}.header a{color:#323330;text-decoration:none}.header a:hover{text-decoration:underline}.container,.inner-footer{width:100%;margin-top:2rem;padding:1.4rem 1rem;overflow:auto}::selection,::-moz-selection{background:#f0db4f}.main-title{font-size:2.4rem;margin-bottom:1.4rem}.toc{display:none}@media(min-width: 768px){.container,.inner-footer{width:740px;margin-left:auto;margin-right:auto}.main-title{font-size:3rem;margin-bottom:1.4rem}}@media(min-width: 992px){.container,.inner-footer{width:960px}.week{width:65%;margin-left:35%}.main-title{font-size:4rem;margin-bottom:1.96rem}p{font-size:1.4rem;margin-bottom:1.96rem}.toc{width:25%;display:block;position:fixed;top:14.5rem;text-align:right}.toc ul{list-style-type:none;font-size:1.4rem}}@media(min-width: 1200px){.container,.inner-footer{width:1160px}}/*# sourceMappingURL=inline.min.css.map */
 </style>
     <link rel="stylesheet" href="inter-ui.min.css" media="none" onload="if(media!='all')media='all'">
     <link rel="stylesheet" href="style.min.css" media="none" onload="if(media!='all')media='all'">
@@ -20,7 +20,7 @@
 
     <main class="container">
 <h2 class="main-title">Välkommen till jsramverk<h2>
-<p>Detta är kursen DV1612 JavaScript-baserade webbramverk. Vi ska i denna kurs använda oss av JavaScript ramverk både på frontend och backend för skapa användarvänliga webbplatser.</p>
+<p>Detta är kursen DV1612 JavaScript-baserade webbramverk. Vi ska i denna kurs använda oss av JavaScript ramverk både på frontend och backend för att skapa användarvänliga webbplatser.</p>
 <p>Nedan finns inlämningsuppgifterna tillsammans med material om de tekniker och verktyg som används i kursen.</p>
 
 <div class="assignments">
@@ -31,7 +31,7 @@
         <div class="assignment-body">
             <p>Vi utvärderar frontend ramverk och skapar en me-applikation i det JavaScript ramverk du valde.</p>
 
-            <p><a href="week1.html">Gå till uppgiften</a></p>
+            <p><a href="frontend.html">Gå till uppgiften</a></p>
         </div>
     </div>
     <div class="assignment-box">
@@ -41,7 +41,7 @@
         <div class="assignment-body">
             <p>Vi bygger vidare på vår me-applikation och tittar på hur användarens upplevelse sätts i fokus.</p>
 
-            <p><a href="week2.html">Gå till uppgiften</a></p>
+            <p><a href="ux.html">Gå till uppgiften</a></p>
         </div>
     </div>
     <div class="assignment-box">
@@ -51,7 +51,7 @@
         <div class="assignment-body">
             <p>Vi skaffar oss en server och driftsätter ett API som vi använder i vår me-applikation.</p>
 
-            <p><a href="#">Gå till uppgiften</a></p>
+            <p><a href="backend.html">Gå till uppgiften</a></p>
         </div>
     </div>
     <div class="assignment-box">
@@ -61,7 +61,7 @@
         <div class="assignment-body">
             <p>Vi skapar en testmiljö för både frontend och backend kod, samt ett flöde för Continouos Integration.</p>
 
-            <p><a href="#">Gå till uppgiften</a></p>
+            <p><a href="test.html">Gå till uppgiften</a></p>
         </div>
     </div>
     <div class="assignment-box">
@@ -71,7 +71,7 @@
         <div class="assignment-body">
             <p>Vi tittar på hur vi kan använda websockets för realtidsprogrammering på webben.</p>
 
-            <p><a href="#">Gå till uppgiften</a></p>
+            <p><a href="realtid.html">Gå till uppgiften</a></p>
         </div>
     </div>
     <div class="assignment-box">
@@ -81,7 +81,7 @@
         <div class="assignment-body">
             <p>Vi användar en NoSQL databas för att spara data och jämför med relationsdatabaser.</p>
 
-            <p><a href="#">Gå till uppgiften</a></p>
+            <p><a href="nosql.html">Gå till uppgiften</a></p>
         </div>
     </div>
     <div class="assignment-box project">
@@ -91,7 +91,7 @@
         <div class="assignment-body">
             <p>Du använder dina kunskaper från tidigare i kursen till att skapa en trading plattform.</p>
 
-            <p><a href="#">Gå till projektet</a></p>
+            <p><a href="project.html">Gå till projektet</a></p>
         </div>
     </div>
 </div>
