--- a/output/frontend.html
+++ b/output/frontend.html
@@ -20,12 +20,18 @@
     </header>
 
     <main class="container">
-<p class='breadcrump'><a href='/'>jsramverk.me</a> / Frontend</p><div class='week-container'><nav class='toc'><ul><li><a href='#Frontend'>Frontend</a></li><li><a href='#lasa'>läsa</a></li><li><a href='#titta'>titta</a></li><li><a href='#kravspec'>kravspec</a></li></ul></nav><article class='week'>
+<p class='breadcrump'><a href='/'>jsramverk.me</a> / Frontend</p><div class='week-container'><nav class='toc'><ul><li><a href='#Frontend'>Frontend</a></li><li><a href='#Lasa'>Läsa</a></li><li><a href='#Titta'>Titta</a></li><li><a href='#Material-och-tekniker'>Material och tekniker</a></li><li><a href='#Kravspecifikation'>Kravspecifikation</a></li><li><a href='#Skriva'>Skriva</a></li></ul></nav><article class='week'>
 </section><section  id="Frontend"><h1><a href="#Frontend">Frontend</a></h1>
 <p>Vi utvärderar frontend ramverk och skapar en me-applikation i det JavaScript ramverk du valde.</p>
-</section><section  id="lasa"><h2><a href="#lasa">läsa</a></h2>
-</section><section  id="titta"><h2><a href="#titta">titta</a></h2>
-</section><section  id="kravspec"><h2><a href="#kravspec">kravspec</a></h2></article></section></div>    </main>
+</section><section  id="Lasa"><h2><a href="#Lasa">Läsa</a></h2>
+<p>Följande länkar är bra att ha för undersökande och implementation.</p>
+
+</section><section  id="Titta"><h2><a href="#Titta">Titta</a></h2>
+<p>I nedanstående video berättar John Papa om hur man kan tänka när man väljer ett JavaScript-ramverk.</p>
+<p><div class='embed-container'><iframe src="https://www.youtube.com/embed/dHptnyroFNA" frameborder="0" allowfullscreen></iframe></div></p>
+</section><section  id="Material-och-tekniker"><h2><a href="#Material-och-tekniker">Material och tekniker</a></h2>
+</section><section  id="Kravspecifikation"><h2><a href="#Kravspecifikation">Kravspecifikation</a></h2>
+</section><section  id="Skriva"><h2><a href="#Skriva">Skriva</a></h2></article></section></div>    </main>
 
     <footer class="footer">
         <div class="inner-footer">
