--- a/output/nosql.html
+++ b/output/nosql.html
@@ -20,12 +20,12 @@
     </header>
 
     <main class="container">
-<p class='breadcrump'><a href='/'>jsramverk.me</a> / NoSQL</p><div class='week-container'><nav class='toc'><ul><li><a href='#NoSQL'>NoSQL</a></li><li><a href='#lasa'>läsa</a></li><li><a href='#titta'>titta</a></li><li><a href='#kravspec'>kravspec</a></li></ul></nav><article class='week'>
-</section><section  id="NoSQL"><h1><a href="#NoSQL">NoSQL</a></h1>
+<p class='breadcrump'><a href='/'>jsramverk.me</a> / NoSQL</p><div class='week-container'><nav class='toc'><ul><li><a href='#nosql'>NoSQL</a></li><li><a href='#lasa'>läsa</a></li><li><a href='#titta'>titta</a></li><li><a href='#kravspec'>kravspec</a></li></ul></nav><article class='week'><section  id="nosql"><h1><a href="#nosql">NoSQL</a></h1>
 <p>Vi användar en NoSQL databas för att spara data och jämför med relationsdatabaser.</p>
 </section><section  id="lasa"><h2><a href="#lasa">läsa</a></h2>
 </section><section  id="titta"><h2><a href="#titta">titta</a></h2>
-</section><section  id="kravspec"><h2><a href="#kravspec">kravspec</a></h2></article></section></div>    </main>
+</section><section  id="kravspec"><h2><a href="#kravspec">kravspec</a></h2>
+</article></section></div>    </main>
 
     <footer class="footer">
         <div class="inner-footer">
