--- a/output/project.html
+++ b/output/project.html
@@ -20,12 +20,12 @@
     </header>
 
     <main class="container">
-<p class='breadcrump'><a href='/'>jsramverk.me</a> / Frontend</p><div class='week-container'><nav class='toc'><ul><li><a href='#Frontend'>Frontend</a></li><li><a href='#lasa'>läsa</a></li><li><a href='#titta'>titta</a></li><li><a href='#kravspec'>kravspec</a></li></ul></nav><article class='week'>
-</section><section  id="Frontend"><h1><a href="#Frontend">Frontend</a></h1>
+<p class='breadcrump'><a href='/'>jsramverk.me</a> / Projekt</p><div class='week-container'><nav class='toc'><ul><li><a href='#projekt'>Projekt</a></li><li><a href='#lasa'>läsa</a></li><li><a href='#titta'>titta</a></li><li><a href='#kravspec'>kravspec</a></li></ul></nav><article class='week'><section  id="projekt"><h1><a href="#projekt">Projekt</a></h1>
 <p>Vi utvärderar frontend ramverk och skapar en me-applikation i det JavaScript ramverk du valde.</p>
 </section><section  id="lasa"><h2><a href="#lasa">läsa</a></h2>
 </section><section  id="titta"><h2><a href="#titta">titta</a></h2>
-</section><section  id="kravspec"><h2><a href="#kravspec">kravspec</a></h2></article></section></div>    </main>
+</section><section  id="kravspec"><h2><a href="#kravspec">kravspec</a></h2>
+</article></section></div>    </main>
 
     <footer class="footer">
         <div class="inner-footer">
