--- a/output/frontend.html
+++ b/output/frontend.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>jsramverk</title>
-    <style>*{margin:0;padding:0;box-sizing:border-box}html{scroll-behavior:smooth}body{font-family:sans-serif;font-display:auto}.header{width:100%;padding:1.4rem 1rem;background:linear-gradient(45deg, #f0db4f, #f4e57e);box-shadow:2px 2px 5px 0 rgba(0,0,0,.2);z-index:1000}.header h1{margin-bottom:0}.header a{color:#323330;text-decoration:none}.header a:hover{text-decoration:underline}.container,.inner-footer{width:100%;margin-top:2rem;padding:1.4rem 1rem;overflow:auto}::selection,::-moz-selection{background:#f0db4f}.main-title{font-size:2.4rem;margin-bottom:1.4rem}.toc{visibility:hidden}@media(min-width: 768px){.container,.inner-footer{width:740px;margin-left:auto;margin-right:auto}.main-title{font-size:3rem;margin-bottom:1.4rem}}@media(min-width: 992px){.container,.inner-footer{width:960px}.week-container{width:100%}.week{width:auto;margin-left:350px}.main-title{font-size:4rem;margin-bottom:1.96rem}p{font-size:1.4rem;margin-bottom:1.96rem}.toc{width:330px;visibility:visible;text-align:right;position:fixed;top:14.5rem}.toc ul{list-style-type:none;font-size:1.4rem}}@media(min-width: 1200px){.container,.inner-footer{width:1160px}}/*# sourceMappingURL=inline.min.css.map */
+    <style>*{margin:0;padding:0;box-sizing:border-box}html{scroll-behavior:smooth}body{font-family:sans-serif;font-display:auto}.header{width:100%;padding:1.4rem 1rem;background:linear-gradient(45deg, #f0db4f, #f4e57e);box-shadow:2px 2px 5px 0 rgba(0,0,0,.2);z-index:1000}.header h1{margin-bottom:0}.header a{color:#323330;text-decoration:none}.header a:hover{text-decoration:underline}.container,.inner-footer{width:100%;margin-top:2rem;padding:1.4rem 1rem;overflow:auto}::selection,::-moz-selection{background:#f0db4f}.main-title{font-size:2.4rem;margin-bottom:1.4rem}.toc{display:none}@media(min-width: 768px){.container,.inner-footer{width:740px;margin-left:auto;margin-right:auto}.main-title{font-size:3rem;margin-bottom:1.4rem}}@media(min-width: 992px){.container,.inner-footer{width:960px}.week-container{width:100%;margin-bottom:16rem}.week{width:auto;margin-left:350px}.main-title{font-size:4rem;margin-bottom:1.96rem}p{font-size:1.4rem;margin-bottom:1.96rem}.toc{width:310px;display:block;text-align:right;position:fixed;top:14.5rem}.toc ul{list-style-type:none;font-size:1.4rem}}@media(min-width: 1200px){.container,.inner-footer{width:1160px}}/*# sourceMappingURL=inline.min.css.map */
 </style>
     <link rel="stylesheet" href="inter-ui.min.css" media="none" onload="if(media!='all')media='all'">
     <link rel="stylesheet" href="style.min.css" media="none" onload="if(media!='all')media='all'">
@@ -23,7 +23,7 @@
     </header>
 
     <main class="container">
-<p class='breadcrump'><a href='/'>jsramverk.me</a> / Frontend</p><div class='week-container'><nav class='toc'><ul><li><a href='#frontend'>Frontend</a></li><li><a href='#lasa'>Läsa</a></li><li><a href='#titta'>Titta</a></li><li><a href='#material-och-tekniker'>Material och tekniker</a></li><li><a href='#kravspecifikation'>Kravspecifikation</a></li><li><a href='#skriva'>Skriva</a></li></ul></nav><article class='week'><section  id="frontend"><h1><a href="#frontend">Frontend</a></h1>
+<p class='breadcrump'><a href='/'>jsramverk.me</a> / Frontend</p><div class='week-container'><nav class='toc'><ul><li><a href='#frontend'>Frontend</a></li><li><a href='#lasa'>Läsa</a></li><li><a href='#titta'>Titta</a></li><li><a href='#material-och-tekniker'>Material och tekniker</a></li><li><a href='#tekniska-koncept'>Tekniska koncept</a></li><li><a href='#komponenter'>Komponenter</a></li><li><a href='#lankning-av-data'>Länkning av data</a></li><li><a href='#kravspecifikation'>Kravspecifikation</a></li><li><a href='#skriva'>Skriva</a></li></ul></nav><article class='week'><section  id="frontend"><h1><a href="#frontend">Frontend</a></h1>
 <p>Vi utvärderar frontend ramverk och skapar en me-applikation i det JavaScript ramverk du valde.</p>
 </section><section  id="lasa"><h2><a href="#lasa">Läsa</a></h2>
 <p>Följande länkar är bra att ha för undersökande och implementation.</p>
@@ -45,7 +45,7 @@
 <p>I nedanstående video berättar John Papa om hur man kan tänka när man väljer ett JavaScript-ramverk.</p>
 <div class='embed-container'><iframe src="https://www.youtube.com/embed/dHptnyroFNA" frameborder="0" allowfullscreen></iframe></div>
 </section><section  id="material-och-tekniker"><h2><a href="#material-och-tekniker">Material och tekniker</a></h2>
-</section><section  id="rader-skriven-kod-i-exempelprogrammen-loc"><h4><a href="#rader-skriven-kod-i-exempelprogrammen-loc">Rader skriven kod i exempelprogrammen {#loc}</a></h4>
+<h4>Rader skriven kod i exempelprogrammen</h4>
 <p>I kursrepots exempel katalog finns två olika exempel program skrivna med hjälp av de fem ovannämnda teknikerna. I <code>example/tic-tac-toe</code> finns ett luffarschack implementerad med möjlighet att hoppa tillbaka i spelets historik. I <code>example/calculator</code> är en simpel miniräknare implementerad.</p>
 <p>Dessutom finns det samma Me-sida som konsumerar me-api:t från tidigare kursmoment implementerad i de 5 olika teknikerna. <a href="https://github.com/emilfolino?utf8=%E2%9C%93&amp;tab=repositories&amp;q=me-&amp;type=&amp;language=">GitHub repon</a> för dessa 5 Me-sidor samt me-api:t finns tillgängligt. Dessa är även driftsatta på <code>me-{angular,mithril,react,vanilla,vue}.jsramverk.me</code>.</p>
 <p>Först tar vi en titt på antal rader som utvecklaren behöver skriva i dessa små exempelprogram och hur stora produktionsfilerna för dessa exempelprogram är.</p>
@@ -88,7 +88,7 @@
 </tr>
 </tbody>
 </table>
-</section><section  id="storlek-produktionsfil(er)-filesize"><h4><a href="#storlek-produktionsfil(er)-filesize">Storlek produktionsfil(er) {#filesize}</a></h4>
+<h4>Storlek produktionsfil(er)</h4>
 <p>I nedanstående tabell listas storleken på produktionsfilerna som skapas av antingen bygg verktyget i ramverket, webpack eller uglify. Filstorlekar är utskrivna med hjälp av kommandot <code>ls -lh</code> i ett bash-skal.</p>
 <table>
 <thead>
@@ -128,11 +128,12 @@
 </tr>
 </tbody>
 </table>
+</section><section  id="tekniska-koncept"><h2><a href="#tekniska-koncept">Tekniska koncept</a></h2>
 <p>Vi tittar i denna del av artikeln på några tekniska koncept som används i de olika ramverken. Vi tittar på hur man har vald att implementera dessa koncept i de olika ramverken och utvärderar vilka fördelar och nackdelar som finns med att göra på det viset.</p>
-</section><section  id="komponenter-komponenter"><h3><a href="#komponenter-komponenter">Komponenter {#komponenter}</a></h3>
+</section><section  id="komponenter"><h3><a href="#komponenter">Komponenter</a></h3>
 <p>De fyra ramverk som har valts ut i denna artikel är alla byggda runt komponenter. Komponenter är återanvändbara delar av koden, som i bästa fall inte har några externa beroenden.</p>
 <p>I mithril och React är allt JavaScript och komponenterna definieras i JavaScript filer. I mithril är enda kravet att det ska finnas en <code>view</code> funktion som returnerar noder. I React heter funktionen <code>render</code> och funktionen returnerar JSX. I Vue finns varje komponent i en fil men är uppdelade i tre delar <code>template</code>, <code>script</code> och <code>style</code>, som motsvarar de tre lagren vi känner till från tidigare med struktur (HTML), stil (CSS) och dynamik (JavaScript). I angular har man tagit det ett steg längre med tre olika filer för dessa tre lager.</p>
-</section><section  id="lankning-av-data-linking"><h3><a href="#lankning-av-data-linking">Länkning av data {#linking}</a></h3>
+</section><section  id="lankning-av-data"><h3><a href="#lankning-av-data">Länkning av data</a></h3>
 <p>Vi vill i många applikationer och speciellt i applikationer där data uppdateras ofta länka data i våra modeller till representationen i en vy. I vanilla JavaScript hade vi gjort det genom att varje gång data uppdateras sätta ett nytt värde för ett specifikt element i DOM’en.</p>
 <pre><code class="language-javascript">var data = 42;
 
@@ -157,7 +158,30 @@ export default {
 </code></pre>
 <p>Om medlemsvariabeln <code>current</code> får ett nytt värde ändras den direkt i den kopplade template. I vanilla JavaScript gör vi en explicit koppling och uppdatering av data och i de ramverk som har valts ut är det en implicit koppling och uppdatering.</p>
 </section><section  id="kravspecifikation"><h2><a href="#kravspecifikation">Kravspecifikation</a></h2>
+<ol>
+<li>
+<p>Skapa en me-applikation i ditt valda ramverk med följande routes: “/”, “/reports/kmom01” och “/reports/kmom02”.</p>
+</li>
+<li>
+<p>“/” ska visa en kort beskrivning av dig själv hämtat från ditt me-api.</p>
+</li>
+<li>
+<p>“/reports/kmom01” och “/reports/kmom02” ska visa redovisningstexten från respektive kmom hämtat från ditt me-api.</p>
+</li>
+<li>
+<p>Driftsätta din me-applikation på din server och länka till applikationen i din redovisningstext på Canvas.</p>
+</li>
+<li>
+<p>Committa alla filer och lägg till en tagg (1.0.*).</p>
+</li>
+<li>
+<p>Pusha upp repot till GitHub, inklusive taggarna.</p>
+</li>
+</ol>
 </section><section  id="skriva"><h2><a href="#skriva">Skriva</a></h2>
+<p>Vi ska i denna kurs träna på akademiskt skrivande och kommer i vecka 1 &amp; 2 fokusera på bakgrund och introduktion. Vi kommer använda oss av en iterativ process för att förbättra vårt akademiska skrivande inför kommande exjobb.</p>
+<p>I ett akademiskt arbete fyller bakgrunden och introduktionen en viktig funktionen. Introduktionen skapar grunden och utgångspunkten för vår diskussion och sammanfattning där vi sätter vårt arbete i relation till nuvarande forskning. Därför är det viktigt att vi i introduktionen berättar för vår läsare hur det ligger till med den nuvarande forskningen i området.</p>
+<p>Skriv en kort introduktion till det ramverk som du har valt. Använd referenser på ett akademiskt sätt.</p>
 </article></section></div>    </main>
 
     <footer class="footer">
