Fixed frontpage font weirdness

--- a/output/index.html
+++ b/output/index.html
@@ -20,11 +20,11 @@
     </header>
 
     <main class="container">
-<h2 class="main-title">Välkommen till jsramverk<h2>
+<h2 class="main-title">Välkommen till jsramverk</h2>
 <p>Detta är kursen DV1612 JavaScript-baserade webbramverk. Vi ska i denna kurs använda oss av JavaScript ramverk både på frontend och backend för att skapa användarvänliga webbplatser.</p>
 <p>Nedan finns inlämningsuppgifterna tillsammans med material om de tekniker och verktyg som används i kursen.</p>
 
-<div class="assignments">
+<section class="assignments">
     <div class="assignment-box">
         <div class="assignment-header dark-charcoal">
             <h3>1: Frontend</h3>
@@ -95,7 +95,52 @@
             <p><a href="project.html">Gå till projektet</a></p>
         </div>
     </div>
-</div>
+</section>
+
+<section class="general-information">
+    <h2>Generell information</h2>
+
+    <h4>Kursplan</h4>
+    <p>Kursplanen hittas genom att söka på <a href="http://edu.bth.se/utbildning/utb_kursplaner.asp?KKurskod=DV1612">DV1612</a> via BTH's webbplats.</p>
+
+    <h4>Studie- och lektionsplan</h4>
+    <p></p>
+
+    <h4>Betygsättning</h4>
+    <p></p>
+
+    <h4>Ladok</h4>
+    <p>Enligt kursplanen finns det 3 Ladok-moment. Dessa är kopplade till inlämningsuppgifterna enligt nedan.</p>
+
+    <table>
+        <thead>
+            <tr>
+                <th>Kursens moment</th>
+                <th>Ladok moment enligt kursplan</th>
+                <th>Betyg</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Frontend &amp; UX</td>
+                <td>Inlämning 1 á 2.5hp</td>
+                <td>G-U</td>
+            </tr>
+            <tr>
+                <td>Backend &amp; Test</td>
+                <td>Inlämning 2 á 2.5hp</td>
+                <td>G-U</td>
+            </tr>
+            <tr>
+                <td>Realtid, NoSQL &amp; Projektet</td>
+                <td>Inlämning 3 á 2.5hp</td>
+                <td>A-F</td>
+            </tr>
+        </tbody>
+    </table>
+
+    <h4>Kursvärdering</h4>
+</section>
     </main>
 
     <footer class="footer">
