updated frontpage with bigger margins

--- a/output/frontend.html
+++ b/output/frontend.html
@@ -215,6 +215,9 @@ return m(&quot;div.square&quot;,
 <p>“/reports/kmom01” ska visa texten beskriven i <a href="#skriva">Skriva</a>.</p>
 </li>
 <li>
+<p>Skapa en <a href="http://README.md">README.md</a> fil i ditt repo som beskriver hur man installerar moduler och starter din me-applikation.</p>
+</li>
+<li>
 <p>Committa alla filer och lägg till en tagg (1.0.*).</p>
 </li>
 <li>
@@ -222,9 +225,6 @@ return m(&quot;div.square&quot;,
 </li>
 <li>
 <p>Länka till ditt GitHub repo i din inlämning på Canvas.</p>
-</li>
-<li>
-<p>Se till att de tre kommandon <code>git clone</code> -&gt; <code>npm install</code> -&gt; <code>npm start</code> klonar, installerar dependencies och startar din me-applikation. Notera i inlämningen om en annan kombination av kommandon ska användas.</p>
 </li>
 </ol>
 </section><section id="skriva"><h2><a href="#skriva">Skriva</a></h2>
